--- a/gamer.html
+++ b/gamer.html
@@ -15,7 +15,7 @@
       plugins: [],
     }
   </script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com" defer></script>
   <style>
     html {
       scroll-behavior: smooth;
@@ -32,16 +32,20 @@
         window.matchMedia('(prefers-color-scheme: dark)').matches)
     ) {
       document.documentElement.classList.add('dark');
+      document.body.classList.add('dark');
     } else {
       document.documentElement.classList.remove('dark');
+      document.body.classList.remove('dark');
     }
 
     function toggleTheme() {
       if (document.documentElement.classList.contains('dark')) {
         document.documentElement.classList.remove('dark');
+        document.body.classList.remove('dark');
         localStorage.theme = 'light';
       } else {
         document.documentElement.classList.add('dark');
+        document.body.classList.add('dark');
         localStorage.theme = 'dark';
       }
     }
